// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text renders 1`] = `
.c0 {
  margin: 0px;
  padding: 0px;
  line-height: 1.25;
}

<p
  class="c0"
/>
`;

exports[`Text renders with prop fontSize 1`] = `
.c0 {
  margin: 0px;
  padding: 0px;
  font-size: 18px;
  line-height: 1.25;
}

<p
  class="c0"
  font-size="18"
/>
`;

exports[`Text renders with prop fontWeight 1`] = `
.c0 {
  margin: 0px;
  padding: 0px;
  font-weight: 500;
  line-height: 1.25;
}

<p
  class="c0"
  font-weight="500"
/>
`;

exports[`Text renders with prop textAlign 1`] = `
.c0 {
  margin: 0px;
  padding: 0px;
  text-align: center;
  line-height: 1.25;
}

<p
  class="c0"
/>
`;

exports[`Text renders with prop width 1`] = `
.c0 {
  margin: 0px;
  padding: 0px;
  width: 100%;
  line-height: 1.25;
}

<p
  class="c0"
  width="1"
/>
`;
